# dog_bark_detection

./: README.md  aws_continuous_recording.py  continuous_recording.py  main.py  pyproject.toml  recording.py
interface/: dog_barking.py
pipelines/: aws_communication.py  communication.py  detect.py  io.py  record.py  store.py
